# kokoro-tts

./: .gitignore  Cargo.toml  README.md
data/: misaki-us-gold.LICENSE
docs/: g2p.md
docs/specs/: g2p-rust-port.md  kokoro-rust-port.md  m3-5-echo-cancellation.md  m3-realtime.md  modernize.md
examples/: loanword_vocab.json  per_phrase_synth.rs
scripts/: convert_weights.py
src/: audio.rs  chapters.rs  lib.rs  main.rs  phonemizer.rs  synthesis.rs
src/model/: bert.rs  config.rs  decoder.rs  generator.rs  mod.rs  predictor.rs  source.rs  stft.rs  text_encoder.rs  upsample.rs
src/phonemizer/: arpabet.rs  custom_vocab.rs  homograph.rs  lexicon.rs  lts.rs  misaki_gold.rs  normalize.rs  sentence.rs
tools/: end_to_end_corpus.txt  end_to_end_roundtrip.py  reference_adain_resblock1.py  reference_alignment.py  reference_bert_encoder.py  reference_custom_albert.py  reference_custom_stft.py  reference_decoder_fusion.py  reference_f0_n.py  reference_generator.py  reference_homograph.py  reference_normalize.py  reference_oov.py  reference_phonemes_to_ids.py  reference_phonemize_lexicon.py  reference_predict_duration.py  reference_punctuation.py  reference_snake.py  reference_source.py  reference_text_encoder.py  reference_voice.py
