[package]
name = "kokoro-tts"
version = "0.1.0"
edition = "2021"

[features]
default = []
espeak = []
metal = ["candle-core/metal", "candle-nn/metal"]

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
cpal = "0.15"
hf-hub = "0.3"
hound = "3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.11", features = ["stream"] }
