[package]
name = "kokoro-tts"
version = "0.1.0"
edition = "2021"

[features]
default = []
espeak = []
metal = ["candle-core/metal", "candle-nn/metal"]
# Round-trip TTS→ASR accuracy harness; pulls in nemotron-speech via path.
accuracy = ["dep:nemotron-speech"]

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
cpal = "0.15"
hf-hub = "0.3"
hound = "3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.11", features = ["stream"] }
nemotron-speech = { path = "../nemotron-speech", optional = true }
regex = "1.12.3"
mp3lame-encoder = "0.2"

# Only built when `--features accuracy` is on; the source file is
# entirely `#![cfg(feature = "accuracy")]` so without this gate cargo
# would try to compile a bin with no main and fail.
[[bin]]
name = "tts_asr_roundtrip"
required-features = ["accuracy"]
